# MultiAgentInboundLogistic

./: .gitignore  IBL_SCHEMA.json  config.json  logistics_schema.json  main.py  mcp_servers.json  pyproject.toml  requirements.txt
app/: main.py
notebooks/: delegate_agent.ipynb  delegate_to.ipynb  forwarder_agent.ipynb  full_agent.ipynb  logistician_agent.ipynb  logistics_agent.ipynb  my_lap.ipynb  supervisor_agent.ipynb
src/: IBL_DataBase.py  data_structure.py  forwarder_agent.py  forwarder_schema.py  full_agent.py  ibl_data_source.py  ibl_database_update.py  logistician_agent.py  logistics_agent.py  logistics_schema.py  prompt.py  state_delegate.py  state_logistician.py  supervisor_agent.py  supervisor_schema.py  utils.py
