[project]
name = "multiagentinboundlogistic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.5",
    "duckduckgo-mcp-server>=0.1.1",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "mcp[cli]>=1.14.0",
    "mcp-use>=1.3.10",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
]
